--- a/conf/cmi/migrate_plus.migration.import_paragraph_info_fi.yml
+++ b/conf/cmi/migrate_plus.migration.import_paragraph_info_fi.yml
@@ -1,4 +1,4 @@
-uuid: 36f8eff8-b3dc-4774-893e-f520580ded80
+uuid: e9ab3234-e78e-47ae-8221-121c878959db
 langcode: en
 status: true
 dependencies:
@@ -6,21 +6,21 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: _M2_X5sJsG3ANcOK7xS0HezPX5pT0BOnYx9M-vm0unk
-id: import_paragraph_info
+  default_config_hash: FoNwpFUNv48HFHPm2XH_uaTNDqRSZJ-Uuh3BkYYBfGE
+id: import_paragraph_info_fi
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: tyollisyyspalvelut
-label: 'Import Info paragraph'
+label: 'Import Info fi paragraph'
 source:
   plugin: url
   data_fetcher_plugin: http
   data_parser_plugin: json
   track_changes: true
   urls:
-    - 'https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/info'
+    - 'https://edit.tyollisyyspalvelut.hel.fi/fi/apijson/paragraph/info?filter[langcode]=fi'
   item_selector: data/
   fields:
     -
@@ -64,6 +64,18 @@ source:
       label: 'Parent field name'
       selector: /attributes/parent_field_name
     -
+      name: revision_translation_affected
+      label: 'Revision translation affected'
+      selector: /attributes/revision_translation_affected
+    -
+      name: content_translation_source
+      label: 'Content translation source'
+      selector: /attributes/content_translation_source
+    -
+      name: content_translation_outdated
+      label: 'Content translation outdated'
+      selector: /attributes/content_translation_outdated
+    -
       name: uid
       label: uid
       selector: /relationships/uid
@@ -93,13 +105,18 @@ process:
       source: created
   status: status
   langcode: langcode
-  default_langcode: default_langcode
+  default_langcode:
+    plugin: default_value
+    default_value: true
   uid:
     plugin: default_value
     default_value: 1
   parent_id: parent_id
   parent_type: parent_type
   parent_field_name: parent_field_name
+  revision_translation_affected: revision_translation_affected
+  content_translation_source: content_translation_source
+  content_translation_outdated: content_translation_outdated
   field_info_text/value: field_info_text/value
   field_info_text/format: field_info_text/format
   field_info_text/prosessed: field_info_text/prosessed
