--- a/conf/cmi/migrate_plus.migration.import_paragraph_link_fi.yml
+++ b/conf/cmi/migrate_plus.migration.import_paragraph_link_fi.yml
@@ -1,4 +1,4 @@
-uuid: 0ee4b9a9-da80-4f65-9bfd-362ca0ae7763
+uuid: f577d9b0-a4c6-4eda-961e-fd998d4966ea
 langcode: en
 status: true
 dependencies:
@@ -6,25 +6,26 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: gn8ENoosFCKfbj70ST3hH9PEmxtS_3t0f5yhW3-lKl8
-id: import_paragraph_accordion
+  default_config_hash: 45sGsnQ5MlThajWB2pQBhPGVMqjAEGX7a6A9CSW6Xak
+id: import_paragraph_link_fi
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: tyollisyyspalvelut
-label: 'Import Accordion paragraph'
+label: 'Import Link fi paragraph'
 source:
   plugin: url
   data_fetcher_plugin: http
   data_parser_plugin: json
   track_changes: true
-  urls: 'https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/accordion'
+  urls:
+    - 'https://edit.tyollisyyspalvelut.hel.fi/fi/apijson/paragraph/link?filter[langcode]=fi'
   item_selector: data/
   fields:
     -
       name: uuid
-      label: uid
+      label: uuid
       selector: id
     -
       name: id
@@ -63,24 +64,36 @@ source:
       label: 'Parent field name'
       selector: /attributes/parent_field_name
     -
+      name: revision_translation_affected
+      label: 'Revision translation affected'
+      selector: /attributes/revision_translation_affected
+    -
+      name: content_translation_source
+      label: 'Content translation source'
+      selector: /attributes/content_translation_source
+    -
+      name: content_translation_outdated
+      label: 'Content translation outdated'
+      selector: /attributes/content_translation_outdated
+    -
       name: uid
       label: uid
       selector: /relationships/uid
     -
-      name: field_accordion_title
-      label: 'Field accordion title'
-      selector: /attributes/field_accordion_title
+      name: field_url
+      label: Url
+      selector: /attributes/field_url
     -
-      name: field_accordion_text
-      label: 'Field accordion text'
-      selector: /attributes/field_accordion_text
+      name: field_url_text
+      label: 'Url Text'
+      selector: /attributes/field_url_text
   ids:
     id:
       type: integer
 process:
   type:
     plugin: default_value
-    default_value: accordion
+    default_value: link
   id: id
   uuid: uuid
   revision_id: revision_id
@@ -92,17 +105,20 @@ process:
       source: created
   status: status
   langcode: langcode
-  default_langcode: default_langcode
+  default_langcode:
+    plugin: default_value
+    default_value: true
   uid:
     plugin: default_value
     default_value: 1
   parent_id: parent_id
   parent_type: parent_type
   parent_field_name: parent_field_name
-  field_accordion_title: field_accordion_title
-  field_accordion_text/value: field_accordion_text/value
-  field_accordion_text/format: field_accordion_text/format
-  field_accordion_text/prosessed: field_accordion_text/prosessed
+  revision_translation_affected: revision_translation_affected
+  content_translation_source: content_translation_source
+  content_translation_outdated: content_translation_outdated
+  field_url: field_url
+  field_url_text: field_url_text
 destination:
   plugin: 'entity_reference_revisions:paragraph'
 migration_dependencies: {  }
