--- a/conf/cmi/migrate_plus.migration.import_paragraph_link_internal_fi.yml
+++ b/conf/cmi/migrate_plus.migration.import_paragraph_link_internal_fi.yml
@@ -1,4 +1,4 @@
-uuid: 3cb4c79a-95f7-4357-8e4b-9066e722c865
+uuid: b2eac0f6-28e5-407d-a42e-771f36314b29
 langcode: en
 status: true
 dependencies:
@@ -6,20 +6,21 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: C0V_PK6LFWBCTBoe0mreeCWirxG9uNsVxCyihaP_nqE
-id: import_paragraph_hero
+  default_config_hash: DTeb1aHNYBdbYry_lkAIyFmXATEhB0CMU7xhJOc6Ojk
+id: import_paragraph_link_internal_fi
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: tyollisyyspalvelut
-label: 'Import Hero paragraph'
+label: 'Import Link internal fi paragraph'
 source:
   plugin: url
   data_fetcher_plugin: http
   data_parser_plugin: json
   track_changes: true
-  urls: 'https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/hero'
+  urls:
+    - 'https://edit.tyollisyyspalvelut.hel.fi/fi/apijson/paragraph/link_internal?filter[langcode]=fi'
   item_selector: data/
   fields:
     -
@@ -63,32 +64,36 @@ source:
       label: 'Parent field name'
       selector: /attributes/parent_field_name
     -
+      name: revision_translation_affected
+      label: 'Revision translation affected'
+      selector: /attributes/revision_translation_affected
+    -
+      name: content_translation_source
+      label: 'Content translation source'
+      selector: /attributes/content_translation_source
+    -
+      name: content_translation_outdated
+      label: 'Content translation outdated'
+      selector: /attributes/content_translation_outdated
+    -
       name: uid
       label: uid
       selector: /relationships/uid
     -
-      name: field_hero_image
-      label: Image
-      selector: /relationships/field_hero_image
+      name: field_media_document
+      label: Document
+      selector: /attributes/field_media_document
     -
-      name: field_hero_text
-      label: Test
-      selector: /attributes/field_hero_text
-    -
-      name: field_hero_title
+      name: field_doc_title
       label: Title
-      selector: /attributes/field_hero_title
-    -
-      name: field_shallow
-      label: Shallow
-      selector: /attributes/field_shallow
+      selector: /attributes/field_doc_title
   ids:
     id:
       type: integer
 process:
   type:
     plugin: default_value
-    default_value: card_list
+    default_value: link_internal
   id: id
   uuid: uuid
   revision_id: revision_id
@@ -100,27 +105,28 @@ process:
       source: created
   status: status
   langcode: langcode
-  default_langcode: default_langcode
+  default_langcode:
+    plugin: default_value
+    default_value: true
   uid:
     plugin: default_value
     default_value: 1
   parent_id: parent_id
   parent_type: parent_type
   parent_field_name: parent_field_name
-  field_hero_image:
+  revision_translation_affected: revision_translation_affected
+  content_translation_source: content_translation_source
+  content_translation_outdated: content_translation_outdated
+  field_media_document:
     target_id:
       plugin: entity_lookup
-      source: field_hero_image/data/id
+      source: field_media_document/data/id
       value_key: uuid
-      bundle: image
+      bundle: document
       bundle_key: bundle
       entity_type: media
       ignore_case: true
-  field_hero_text/value: field_hero_text/value
-  field_hero_text/format: field_hero_text/format
-  field_hero_text/prosessed: field_hero_text/prosessed
-  field_hero_title: field_hero_title
-  field_shallow: field_shallow
+  field_doc_title: field_doc_title
 destination:
   plugin: 'entity_reference_revisions:paragraph'
 migration_dependencies: {  }
