--- a/conf/cmi/migrate_plus.migration.import_paragraph_link_sv.yml
+++ b/conf/cmi/migrate_plus.migration.import_paragraph_link_sv.yml
@@ -1,4 +1,4 @@
-uuid: b9d5ab29-57ca-459b-a0ca-b0adfac52477
+uuid: 74e5f65a-26d2-4573-a9f1-73712d67acbb
 langcode: en
 status: true
 dependencies:
@@ -6,21 +6,22 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: BM9mZUaMd8jG0Ss9pa7eXQonTYgLPQ9Qrm4H8kKZ2I0
-id: import_paragraph_news_list
+  default_config_hash: '-UxJlG2McuMhUQJ845Q2eDv67rAjimDKqA8LurEsOwc'
+id: import_paragraph_link_sv
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: tyollisyyspalvelut
-label: 'Import News list paragraph'
+label: 'Import Link sv paragraph'
 source:
+  translations: true
   plugin: url
   data_fetcher_plugin: http
   data_parser_plugin: json
   track_changes: true
   urls:
-    - 'https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/news_list'
+    - 'https://edit.tyollisyyspalvelut.hel.fi/sv/apijson/paragraph/link?filter[langcode]=sv'
   item_selector: data/
   fields:
     -
@@ -64,35 +65,51 @@ source:
       label: 'Parent field name'
       selector: /attributes/parent_field_name
     -
+      name: revision_translation_affected
+      label: 'Revision translation affected'
+      selector: /attributes/revision_translation_affected
+    -
+      name: content_translation_source
+      label: 'Content translation source'
+      selector: /attributes/content_translation_source
+    -
+      name: content_translation_outdated
+      label: 'Content translation outdated'
+      selector: /attributes/content_translation_outdated
+    -
       name: uid
       label: uid
       selector: /relationships/uid
     -
-      name: field_koro
-      label: Koro
-      selector: /attributes/field_koro
+      name: field_url
+      label: Url
+      selector: /attributes/field_url
     -
-      name: field_short_list
-      label: 'Short list'
-      selector: /attributes/field_short_list
-    -
-      name: field_title
-      label: Title
-      selector: /attributes/field_title
-    -
-      name: field_background_color
-      label: 'Background color'
-      selector: /relationships/field_background_color
+      name: field_url_text
+      label: 'Url Text'
+      selector: /attributes/field_url_text
   ids:
     id:
       type: integer
 process:
   type:
     plugin: default_value
-    default_value: news_list
-  id: id
+    default_value: link
+  pseudo_paragraph_field:
+    plugin: migration_lookup
+    migration: import_paragraph_link_fi
+    source: id
+  id:
+    plugin: extract
+    source: '@pseudo_paragraph_field'
+    index:
+      - '0'
+  revision_id:
+    plugin: extract
+    source: '@pseudo_paragraph_field'
+    index:
+      - '1'
   uuid: uuid
-  revision_id: revision_id
   created:
     -
       plugin: format_date
@@ -101,25 +118,20 @@ process:
       source: created
   status: status
   langcode: langcode
-  default_langcode: default_langcode
   uid:
     plugin: default_value
     default_value: 1
   parent_id: parent_id
   parent_type: parent_type
   parent_field_name: parent_field_name
-  field_koro: field_koro
-  field_short_list: field_short_list
-  field_title: field_title
-  field_background_color:
-    target_id:
-      plugin: entity_lookup
-      source: id
-      value_key: uuid
-      bundle: colors
-      bundle_key: vid
-      entity_type: taxonomy_term
-      ignore_case: true
+  revision_translation_affected: revision_translation_affected
+  content_translation_source: content_translation_source
+  content_translation_outdated: content_translation_outdated
+  field_url: field_url
+  field_url_text: field_url_text
 destination:
   plugin: 'entity_reference_revisions:paragraph'
-migration_dependencies: {  }
+  translations: true
+migration_dependencies:
+  required:
+    - import_paragraph_link_fi
