--- a/conf/cmi/migrate_plus.migration.import_paragraph_mainheading.yml
+++ b/conf/cmi/migrate_plus.migration.import_paragraph_mainheading.yml
@@ -1,4 +1,4 @@
-uuid: 0e734604-dccc-4f80-813f-b908c2077e83
+uuid: d7cce741-eb09-4f69-90de-06610f47f09e
 langcode: en
 status: true
 dependencies:
@@ -6,26 +6,27 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: ggU04DFXbmSgVDNIymQLJGSBffSVlqx3J8-CTTIqBvM
-id: import_paragraph_events_list
+  default_config_hash: KuF2SQuIP1BM8bVLMZd2DuLv4DsJw_bfT9AASAXVYwg
+id: import_paragraph_mainheading
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: tyollisyyspalvelut
-label: 'Import Events list paragraph'
+label: 'Import Mainheading paragraph'
 source:
   plugin: url
   data_fetcher_plugin: http
   data_parser_plugin: json
   track_changes: true
   urls:
-    - 'https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/events_list'
+    - 'https://edit.tyollisyyspalvelut.hel.fi/fi/apijson/paragraph/mainheading?page%5Boffset%5D=0&page%5Blimit%5D=50'
+    - 'https://edit.tyollisyyspalvelut.hel.fi/fi/apijson/paragraph/mainheading?page%5Boffset%5D=50&page%5Blimit%5D=50'
   item_selector: data/
   fields:
     -
       name: uuid
-      label: uuid
+      label: uid
       selector: id
     -
       name: id
@@ -48,10 +49,6 @@ source:
       label: Langcode
       selector: /attributes/langcode
     -
-      name: default_langcode
-      label: 'Default Langcode'
-      selector: /attributes/default_langcode
-    -
       name: parent_id
       label: 'Parent id'
       selector: /attributes/parent_id
@@ -64,32 +61,40 @@ source:
       label: 'Parent field name'
       selector: /attributes/parent_field_name
     -
+      name: revision_translation_affected
+      label: 'Revision translation affected'
+      selector: /attributes/revision_translation_affected
+    -
+      name: content_translation_source
+      label: 'Content translation source'
+      selector: /attributes/content_translation_source
+    -
+      name: content_translation_outdated
+      label: 'Content translation outdated'
+      selector: /attributes/content_translation_outdated
+    -
       name: uid
       label: uid
       selector: /relationships/uid
     -
-      name: field_koro
-      label: Koro
-      selector: /attributes/field_koro
-    -
-      name: field_short_list
-      label: 'Short list'
-      selector: /attributes/field_short_list
+      name: field_show_date
+      label: 'Show date'
+      selector: /attributes/field_show_date
     -
       name: field_title
-      label: Title
+      label: 'Field title'
       selector: /attributes/field_title
     -
-      name: field_background_color
-      label: 'Background color'
-      selector: /relationships/field_background_color
+      name: field_title_color
+      label: 'Field title color'
+      selector: /attributes/field_title_color
   ids:
     id:
       type: integer
 process:
   type:
     plugin: default_value
-    default_value: events_list
+    default_value: mainheading
   id: id
   uuid: uuid
   revision_id: revision_id
@@ -108,18 +113,23 @@ process:
   parent_id: parent_id
   parent_type: parent_type
   parent_field_name: parent_field_name
-  field_koro: field_koro
-  field_short_list: field_short_list
+  revision_translation_affected: revision_translation_affected
+  content_translation_source: content_translation_source
+  content_translation_outdated: content_translation_outdated
+  field_show_date: field_show_date
   field_title: field_title
-  field_background_color:
-    target_id:
-      plugin: entity_lookup
-      source: id
-      value_key: uuid
-      bundle: colors
-      bundle_key: vid
-      entity_type: taxonomy_term
-      ignore_case: true
+  field_title_color:
+    plugin: sub_process
+    source: field_title_color/data
+    process:
+      target_id:
+        plugin: entity_lookup
+        source: id
+        value_key: uuid
+        bundle: colors
+        bundle_key: vid
+        entity_type: taxonomy_term
+        ignore_case: true
 destination:
   plugin: 'entity_reference_revisions:paragraph'
 migration_dependencies: {  }
