--- a/conf/cmi/migrate_plus.migration.import_paragraph_phone_number_box_sv.yml
+++ b/conf/cmi/migrate_plus.migration.import_paragraph_phone_number_box_sv.yml
@@ -1,4 +1,4 @@
-uuid: 8fb2022d-fd9d-4f02-993f-589f9c0a1b05
+uuid: 77155211-5ab7-4b48-8af6-dadec0e8dc3e
 langcode: en
 status: true
 dependencies:
@@ -6,21 +6,22 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: kZ1OIfjX898zQv1ZIvo3h3kXM1KpFdTjhIxX4W50boU
-id: import_paragraph_sujo_embedded
+  default_config_hash: HGWLVas5RJi1Si03JxLia8oncfNvKoGQ5AFXqA5bL-w
+id: import_paragraph_phone_number_box_sv
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: tyollisyyspalvelut
-label: 'Import Sujo embedded paragraph'
+label: 'Import Phone number box sv paragraph'
 source:
+  translations: true
   plugin: url
   data_fetcher_plugin: http
   data_parser_plugin: json
   track_changes: true
   urls:
-    - 'https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/sujo_embedded'
+    - 'https://edit.tyollisyyspalvelut.hel.fi/sv/apijson/paragraph/phone_number_box?filter[langcode]=sv'
   item_selector: data/
   fields:
     -
@@ -64,23 +65,51 @@ source:
       label: 'Parent field name'
       selector: /attributes/parent_field_name
     -
+      name: revision_translation_affected
+      label: 'Revision translation affected'
+      selector: /attributes/revision_translation_affected
+    -
+      name: content_translation_source
+      label: 'Content translation source'
+      selector: /attributes/content_translation_source
+    -
+      name: content_translation_outdated
+      label: 'Content translation outdated'
+      selector: /attributes/content_translation_outdated
+    -
       name: uid
       label: uid
       selector: /relationships/uid
     -
-      name: field_training
-      label: Training
-      selector: /attributes/field_training
+      name: field_pb_text
+      label: Text
+      selector: /attributes/field_pb_text
+    -
+      name: field_pb_title
+      label: Title
+      selector: /attributes/field_pb_title
   ids:
     id:
       type: integer
 process:
   type:
     plugin: default_value
-    default_value: sujo_embedded.
-  id: id
+    default_value: phone_number_box
+  pseudo_paragraph_field:
+    plugin: migration_lookup
+    migration: import_paragraph_phone_number_box_fi
+    source: id
+  id:
+    plugin: extract
+    source: '@pseudo_paragraph_field'
+    index:
+      - '0'
+  revision_id:
+    plugin: extract
+    source: '@pseudo_paragraph_field'
+    index:
+      - '1'
   uuid: uuid
-  revision_id: revision_id
   created:
     -
       plugin: format_date
@@ -89,14 +118,22 @@ process:
       source: created
   status: status
   langcode: langcode
-  default_langcode: default_langcode
   uid:
     plugin: default_value
     default_value: 1
   parent_id: parent_id
   parent_type: parent_type
   parent_field_name: parent_field_name
-  field_training: field_training
+  revision_translation_affected: revision_translation_affected
+  content_translation_source: content_translation_source
+  content_translation_outdated: content_translation_outdated
+  field_pb_text/value: field_pb_text/value
+  field_pb_text/format: field_pb_text/format
+  field_pb_text/prosessed: field_pb_text/prosessed
+  field_pb_title: field_pb_title
 destination:
   plugin: 'entity_reference_revisions:paragraph'
-migration_dependencies: {  }
+  translations: true
+migration_dependencies:
+  required:
+    - import_paragraph_phone_number_box_fi
