--- a/conf/cmi/migrate_plus.migration.import_paragraph_subheading.yml
+++ b/conf/cmi/migrate_plus.migration.import_paragraph_subheading.yml
@@ -1,4 +1,4 @@
-uuid: 92310b45-781e-42c6-a311-fc270126702b
+uuid: c740bce2-9f7f-48f0-83b0-b9aca678b809
 langcode: en
 status: true
 dependencies:
@@ -6,7 +6,7 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: R5X6lpB3WNqpWQyL7v9_AuyThV7JBQ1MnqUXjxiMKKw
+  default_config_hash: l7CQjEmVTwkIo33Ra9eDNb9xwHW-j7-7odikAOTsJls
 id: import_paragraph_subheading
 class: null
 field_plugin_method: null
@@ -19,7 +19,9 @@ source:
   data_fetcher_plugin: http
   data_parser_plugin: json
   track_changes: true
-  urls: 'https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/subheading'
+  urls:
+    - 'https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/subheading?page%5Boffset%5D=0&page%5Blimit%5D=50'
+    - 'https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/subheading?page%5Boffset%5D=50&page%5Blimit%5D=50'
   item_selector: data/
   fields:
     -
