--- a/conf/cmi/migrate_plus.migration.import_paragraph_subheading_fi.yml
+++ b/conf/cmi/migrate_plus.migration.import_paragraph_subheading_fi.yml
@@ -1,4 +1,4 @@
-uuid: f97ffcab-cd57-4c75-95b8-27fee52722dc
+uuid: 7e46ff61-c5e6-4799-b7ae-dff0b26da564
 langcode: en
 status: true
 dependencies:
@@ -6,26 +6,27 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: ujDHfuvIjV3Y27NDkFAXmxfkSI3uJqmpf9N_LTGzWzk
-id: import_paragraph_lead
+  default_config_hash: A88bOChL9z5amHm6l8gyvKSiIg1YL-PxBPXtV48gDlY
+id: import_paragraph_subheading_fi
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: tyollisyyspalvelut
-label: 'Import Lead paragraph'
+label: 'Import Subheading fi paragraph'
 source:
   plugin: url
   data_fetcher_plugin: http
   data_parser_plugin: json
   track_changes: true
   urls:
-    - 'https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/lead'
+    - 'https://edit.tyollisyyspalvelut.hel.fi/fi/apijson/paragraph/subheading?filter[langcode]=fi&page%5Boffset%5D=0&page%5Blimit%5D=50'
+    - 'https://edit.tyollisyyspalvelut.hel.fi/fi/apijson/paragraph/subheading?filter[langcode]=fi&page%5Boffset%5D=50&page%5Blimit%5D=50'
   item_selector: data/
   fields:
     -
       name: uuid
-      label: uuid
+      label: uid
       selector: id
     -
       name: id
@@ -64,20 +65,36 @@ source:
       label: 'Parent field name'
       selector: /attributes/parent_field_name
     -
+      name: revision_translation_affected
+      label: 'Revision translation affected'
+      selector: /attributes/revision_translation_affected
+    -
+      name: content_translation_source
+      label: 'Content translation source'
+      selector: /attributes/content_translation_source
+    -
+      name: content_translation_outdated
+      label: 'Content translation outdated'
+      selector: /attributes/content_translation_outdated
+    -
       name: uid
       label: uid
       selector: /relationships/uid
     -
-      name: field_lead_text
-      label: Text
-      selector: /attributes/field_lead_text
+      name: field_subheading_title
+      label: Title
+      selector: /attributes/field_subheading_title
+    -
+      name: field_title_color
+      label: 'Field title color'
+      selector: /attributes/field_title_color
   ids:
     id:
       type: integer
 process:
   type:
     plugin: default_value
-    default_value: lead
+    default_value: subheading
   id: id
   uuid: uuid
   revision_id: revision_id
@@ -89,14 +106,31 @@ process:
       source: created
   status: status
   langcode: langcode
-  default_langcode: default_langcode
+  default_langcode:
+    plugin: default_value
+    default_value: true
   uid:
     plugin: default_value
     default_value: 1
   parent_id: parent_id
   parent_type: parent_type
   parent_field_name: parent_field_name
-  field_lead_text: field_lead_text
+  revision_translation_affected: revision_translation_affected
+  content_translation_source: content_translation_source
+  content_translation_outdated: content_translation_outdated
+  field_subheading_title: field_subheading_title
+  field_title_color:
+    plugin: sub_process
+    source: field_title_color/data
+    process:
+      target_id:
+        plugin: entity_lookup
+        source: id
+        value_key: uuid
+        bundle: colors
+        bundle_key: vid
+        entity_type: taxonomy_term
+        ignore_case: true
 destination:
   plugin: 'entity_reference_revisions:paragraph'
 migration_dependencies: {  }
