--- a/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_news_sv.yml
+++ b/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_news_sv.yml
@@ -132,7 +132,6 @@ process:
   promote: promote
   langcode: langcode
   path/alias: path/alias
-  path/pid: path/pid
   path/langcode: path/langcode
   content_translation_source: content_translation_source
   content_translation_outdated: content_translation_outdated
@@ -140,14 +139,14 @@ process:
   uid:
     plugin: default_value
     default_value: 1
-  field_page_width/target_id:
-      plugin: entity_lookup
-      source: field_page_width/data/id
-      value_key: uuid
-      bundle: paragraph_width
-      bundle_key: vid
-      entity_type: taxonomy_term
-      ignore_case: true
+  field_page_width:
+    plugin: entity_lookup
+    source: field_page_width/data/id
+    value_key: uuid
+    bundle: paragraph_width
+    bundle_key: vid
+    entity_type: taxonomy_term
+    ignore_case: true
   field_page_content:
     plugin: sub_process
     source: field_page_content/data
