--- a/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_paragraph_image_and_card_en.yml
+++ b/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_paragraph_image_and_card_en.yml
@@ -1,9 +1,9 @@
-id: import_paragraph_mainheading_en
-label: Import Mainheading en paragraph
+id: import_paragraph_image_and_card_en
+label: Import Image and card en paragraph
 migration_group: tyollisyyspalvelut
 migration_dependencies:
   required:
-    - import_paragraph_mainheading_fi
+    - import_paragraph_image_and_card_fi
 dependencies:
   enforced:
     module:
@@ -28,7 +28,7 @@ source:
   # Flags whether to track changes to incoming data. If TRUE, we will maintain
   # hashed source rows to determine whether incoming data has changed.
   track_changes: true
-  urls: https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/mainheading?filter[langcode]=en
+  urls: https://edit.tyollisyyspalvelut.hel.fi/apijson/paragraph/image_and_card?filter[langcode]=en
   item_selector: data/
   # Under 'fields', we list the data items to be imported. The first level keys
   # are the source field names we want to populate (the names to be used as
@@ -39,7 +39,7 @@ source:
   fields:
     -
       name: uuid
-      label: 'uid'
+      label: 'uuid'
       selector: id
     -
       name: id
@@ -94,27 +94,23 @@ source:
       label: 'uid'
       selector: /relationships/uid
     -
-      name: field_show_date
-      label: 'Show date'
-      selector: /attributes/field_show_date
+      name: field_ic_card
+      label: 'Card'
+      selector: /relationships/field_ic_card
     -
-      name: field_title
-      label: 'Field title'
-      selector: /attributes/field_title
-    -
-      name: field_title_color
-      label: 'Field title color'
-      selector: /attributes/field_title_color
+      name: field_ic_image
+      label: 'Image'
+      selector: /relationships/field_ic_image
   ids:
     id:
       type: integer
 process:
   type:
     plugin: default_value
-    default_value: mainheading
+    default_value: image_and_card
   pseudo_paragraph_field:
     plugin: migration_lookup
-    migration: import_paragraph_mainheading_fi
+    migration: import_paragraph_image_and_card_fi
     source: id
   id:
     plugin: extract
@@ -144,13 +140,25 @@ process:
   revision_translation_affected: revision_translation_affected
   content_translation_source: content_translation_source
   content_translation_outdated: content_translation_outdated
-  field_show_date: field_show_date
-  field_title: field_title
-  field_title_color:
-    plugin: entity_lookup
-    source: field_title_color/data/id
-    value_key: uuid
-    bundle: colors
-    bundle_key: vid
-    entity_type: taxonomy_term
-    ignore_case: true
+  field_ic_card:
+    plugin: sub_process
+    source: field_ic_card/data
+    process:
+      target_id:
+        plugin: entity_lookup
+        source: id
+        value_key: uuid
+        bundle: card
+        bundle_key: type
+        entity_type: paragraph
+        ignore_case: true
+      target_revision_id: meta/target_revision_id
+  field_ic_image:
+    target_id:
+      plugin: entity_lookup
+      source: field_ic_image/data/id
+      value_key: uuid
+      bundle: image
+      bundle_key: bundle
+      entity_type: media
+      ignore_case: true
